Added update script, better install, support for resize

--- a/templates-mobiles/munin-nodeview.tmpl
+++ b/templates-mobiles/munin-nodeview.tmpl
@@ -39,7 +39,7 @@
 			  <TMPL_LOOP NAME="SERVICES">
 			  	<li> 
 					<h3><a href="<TMPL_VAR NAME="URL">"><TMPL_VAR ESCAPE="HTML" NAME="LABEL"></a></h3>
-					<p><img src="/munin/<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="IMGDAY">" alt="<TMPL_VAR ESCAPE="HTML" NAME="LABEL">" class="imgday" width="300" height="162"></p>
+					<p><img src="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="IMGDAY">" alt="<TMPL_VAR ESCAPE="HTML" NAME="LABEL">" class="imgday" width="300" height="162"></p>
 			  	</li>	
 			  </TMPL_LOOP>
 			  </li>
