Better paths for none /munin/mobile URIs

--- a/templates-mobiles/munin-serviceview.tmpl
+++ b/templates-mobiles/munin-serviceview.tmpl
@@ -30,10 +30,10 @@
 		<TMPL_LOOP NAME="SERVICES">
 		<p>
 		 
-		<img src="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="IMGDAY">" alt="daily graph" class="img_service"><br>
-		<img src="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="IMGWEEK">" alt="weekly graph" class="img_service"><br>
-		<img src="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="IMGMONTH">" alt="monthly graph" class="img_service"><br>
-		<img src="<TMPL_VAR NAME="DOMAIN">/<TMPL_VAR NAME="IMGYEAR">" alt="yearly graph" class="img_service"><br>
+                <img src="<TMPL_VAR NAME="IMGDAY">" alt="daily graph" class="img_service"><br>
+                <img src="<TMPL_VAR NAME="IMGWEEK">" alt="weekly graph" class="img_service"><br>
+                <img src="<TMPL_VAR NAME="IMGMONTH">" alt="monthly graph" class="img_service"><br>
+                <img src="<TMPL_VAR NAME="IMGYEAR">" alt="yearly graph" class="img_service"><br>
 		</p>	
 	    <table width='100%'>
 		  <TMPL_LOOP NAME="GRAPHINFO">
