Now using jQuery Mobile 1.0a2

--- a/mobile-www/css/munin-mobile.css
+++ b/mobile-www/css/munin-mobile.css
@@ -97,3 +97,15 @@
     font-weight: normal;
     font-size: 13px;
 }
+
+/* footer */
+.ui-mobile .footer {
+	font-size: 10px;
+	text-align: center;
+}
+
+.ui-mobile .footer a {
+	color: inherit;
+	font-weight: inherit;
+}
+
