--- a/templates-mobiles/munin-overview.tmpl
+++ b/templates-mobiles/munin-overview.tmpl
@@ -2,9 +2,9 @@
 <html> 
 <head> 
 	<title>Munin :: overview</title> 
-	<link rel="stylesheet"  href="css/jquery.mobile-1.0a1.min.css" /> 
-	<script src="js/jquery-1.4.3.min.js"></script>
-	<script src="js/jquery.mobile-1.0a1.min.js"></script> 
+	<link rel="stylesheet"  href="http://code.jquery.com/mobile/1.0a2/jquery.mobile-1.0a2.min.css" /> 
+	<script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.0a2/jquery.mobile-1.0a2.min.js"></script> 
 	<script src="js/munin-mobile.js"></script>
 	<link rel="stylesheet" href="css/munin-mobile.css" /> 
 
@@ -29,6 +29,7 @@
 			</TMPL_LOOP>
 		</ul>
 	</TMPL_LOOP>
+<p class="footer">Munin + <a href="http://www.munin-mobile.com">Munin Mobile</a> by <a href="http://www.bivald.com">bivald</a></p>
 </div> 
 </body> 
 </html>
